--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <i class="fab fa-linkedin"></i>
           </a>
           <a
-            href="https://github.com/Arsoo-003"
+            href="https://github.com/0-YDEVS"
             target="_blank"
             rel="noopener"
             aria-label="GitHub profile of ARSALANE YOUSSEF"
